java/app-yaml/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-yaml
spec:
  selector:
    app: app-yaml
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: app-yaml
    protocol: TCP
    port: 8080
    targetPort: 8080
