java/app-yaml/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-yaml
  name: app-yaml
spec:
  port:
    targetPort: app-yaml
  to:
    kind: Service
    name: app-yaml
